# madrasah_cross_platform

./: LICENSE  pubspec.yaml
android/: local.properties
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/core/database/: database_helper.dart  database_helper_io.dart  database_helper_web.dart
lib/models/: accounting_transaction.dart  salary_payment.dart  staff.dart  student.dart
lib/providers/: accounting_provider.dart  auth_provider.dart  salary_provider.dart  staff_provider.dart  student_provider.dart
lib/screens/accounting/: accounting_screen.dart
lib/screens/auth/: login_screen.dart
lib/screens/dashboard/: dashboard_screen.dart
lib/screens/data_sync/: data_sync_screen.dart
lib/screens/salary/: salary_management_screen.dart
lib/screens/staff/: staff_form_screen.dart  staff_list_screen.dart
lib/screens/students/: student_form_screen.dart  student_list_screen.dart
lib/services/: data_sync_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows  printing  screen_retriever  window_manager
